--- a/views/views.hbs
+++ b/views/views.hbs
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
     <style>
         table,th,tr,td {
-            border: 1px solid black;
+            border: 1px solid grey ;
             border-collapse: collapse;
         }
     </style>
@@ -20,7 +20,7 @@
     <div class="menu">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-    <a><img src="https://www.pngitem.com/pimgs/m/19-199092_electronic-circuit-logo-png-transparent-png.png" width="100px" height="100px"></a>
+    <a><img src="https://think.edu.vn/wp-content/uploads/2020/05/University-of-Greenwich.jpg" width="100px" height="100px"></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -32,7 +32,7 @@
     </nav>
     </div>
     <br>
-     <h1 style="text-align: center; color: red;">Views page</h1>
+     <h1 style="text-align: center; color: pink ;">Views page</h1>
     <br>
     <table class="table table-dark table-striped">
         <tr>
