--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -19,7 +19,7 @@
     <div class="menu">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-    <a><img src="https://www.pngitem.com/pimgs/m/19-199092_electronic-circuit-logo-png-transparent-png.png" width="100px" height="100px"></a>
+    <a><img src="https://think.edu.vn/wp-content/uploads/2020/05/University-of-Greenwich.jpg" width="100px" height="100px"></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
