--- a/views/home.hbs
+++ b/views/home.hbs
@@ -48,6 +48,7 @@
             <div class="mb-3">
                 <label class="form-label" for="txtName"> Product Name</label>
                 <input type="text" class="form-control" name="txtName" id="txtName">
+                 <span style="color: red;">{{nameError}}</span>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="txtPrice"> Price</label>
